--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Sah-Schemas-Examples
 
-0.001   2016-07-19 (PERLANCAR) (unreleased)
+0.001   2016-07-19 (PERLANCAR)
 
         - First release.
