--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Sah-Schemas-Examples
 
+0.002   2016-07-19 (PERLANCAR)
+
+	- Add schema: example::has_merge.
+
+
 0.001   2016-07-19 (PERLANCAR)
 
         - First release.
