--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Sah-Schemas-Examples
 
+0.003   2016-07-20 (PERLANCAR)
+
+        - Add schema: schema::array_of_str.
+
+        - [build] Rebuild with newer DZP:Sah::Schemas to add prereq to other
+          used Sah::Schema::* modules.
+
+
 0.002   2016-07-19 (PERLANCAR)
 
 	- Add schema: example::has_merge.
