--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Sah-Schemas-Examples
 
+0.005   2016-12-09 (PERLANCAR)
+
+        - Add schemas: example::hash_of_str,
+          example::{array,hash}_of_{int,posint}.
+
+
 0.004   2016-07-22 (PERLANCAR)
 
         - [build] Rebuild to generate Sah::SchemaR::* modules.
@@ -7,7 +13,7 @@ Revision history for Sah-Schemas-Examples
 
 0.003   2016-07-20 (PERLANCAR)
 
-        - Add schema: schema::array_of_str.
+        - Add schema: example::array_of_str.
 
         - [build] Rebuild with newer DZP:Sah::Schemas to add prereq to other
           used Sah::Schema::* modules.
