--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.008   2021-07-30  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Add more mentions.
+
+
 0.007   2021-07-30  Released-By: PERLANCAR; Urgency: medium
 
 	- Move schemas: {example::,}array_of_int,
