--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.009   2021-07-30  Released-By: PERLANCAR; Urgency: medium
+
+	- [doc] Add descriptions.
+
+
 0.008   2021-07-30  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
